# parmetis

./: .gitignore  CMakeLists.txt
libparmetis/: CMakeLists.txt  parmetislib.h  wave.c  xyzpart.c
programs/: CMakeLists.txt  parmetisbin.h
